# Agentshop

./: .gitignore  CONDITION_REFERENCE.md  DATA_SOURCES.md  EXPERIMENT_GUIDE.md  FAQ.md  PROJECT_DETAILED_REPORT_2026-03-24.md  PROJECT_EXPLANATION_REPORT.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  aces_ctl.sh  download_and_expand_datasets.py  expand_from_amazon.py  extract_recommendations.sh  manage_datasets.py  pyproject.toml  query.md  run_agent_dual_mode.py  run_batch_experiments.sh  run_browser_agent.py  run_browser_agent_multi.py  run_experiment.py  run_query_0317.sh  run_ranking_experiment.py  run_smartwatch_experiment.py  start_web_server.py  test_integration.py  test_llamaindex_search.py
aces/: __init__.py
analysis/: price_histograms_5usd_bins_2026-04-05.json
analysis_outputs/: full_4queries_100x2_distribution_20260420.md  usb_verbal_20runs_merged_20260421.json  usb_verbal_estimated_100runs_20260421.json  usb_web_verbal_10runs_20260421.json  usb_web_vs_exp_10x_20260420.json
configs/: queries.yaml
datasets_expand_stage/: athletic_shoes_men.json  athletic_shoes_women.json  backpack_men.json  insulated_cup_men.json  insulated_cup_women.json  smart_watch.json
datasets_expand_stage2/: athletic_shoes_men.json  athletic_shoes_women.json
datasets_unified/: beauty_and_personal_care.json  cell_phones_and_accessories.json  electronics.json  health_and_household.json  home_and_kitchen.json  mousepad.json  office_products.json  pet_supplies.json  ski_jacket.json  sports_and_outdoors.json  tools_and_home_improvement.json  toys_and_games.json
docs/: AGENT_REFACTORING.md  README.md  ui_regression_notes.md
examples/: complete_workflow.py  demo_marketplace_modes.py  demo_screenshot_workflow.py  run_ab_test_example.py
queries/: smartwatch_queries.md
scripts/: analyze_recommendations_0318.py  capture_baseline_snapshot.sh  run_distribution_via_web_backend.py  run_query_stability_10x.py  run_visual_framework_and_price_highlight.py
tests/: test_cli_compat.py  (+12 more)
(+156 files in other folders)
